Add basic html display

--- a/index.html
+++ b/index.html
@@ -7,9 +7,51 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <main>
-        
-    </main>
-    <script link="app.js"></script>
+    <div class="page-wrapper">
+        <h1>
+            Calculator
+        </h1>
+        <main>
+            <div class="calculator-container">
+                <div class="calculator-display"><p>4+4</p></div>
+                <div class="button-container">
+                    <div class="first-row">
+                        <button>+</button>
+                        <button>-</button>
+                        <button>A</button>
+                        <button>C</button>
+                    </div>
+                    <div class="second-row">
+                        <button>7</button>
+                        <button>8</button>
+                        <button>9</button>
+                        <button>*</button>
+                    </div>
+                    <div class="third-row">
+                        <button>4</button>
+                        <button>5</button>
+                        <button>6</button>
+                        <button>-</button>
+                    </div>
+                    <div class="fourth-row">
+                        <button>1</button>
+                        <button>2</button>
+                        <button>3</button>
+                        <button>.</button>
+                    </div>
+                    <div class="fifth-row">
+                        <button>0</button>
+                        <button>.</button>
+                        <button>=</button>
+                        <button>A</button>
+                    </div>
+                </div>
+            </div>
+        </main>     
+        <footer>
+            <p>Rodrigo Nicolas 2024</p>
+        </footer>
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
