--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         </h1>
         <main>
             <div class="calculator-container">
-                <div class="calculator-display"><p>4+4</p></div>
+                <div class="calculator-display">
+                    <p class="operation">4+4</p>
+                    <p class="result">5346526</p>
+                </div>
                 <div class="button-container">
                     <div class="first-row">
                         <button>+</button>
