--- a/index.html
+++ b/index.html
@@ -18,42 +18,32 @@
                     <p class="result">5346526</p>
                 </div>
                 <div class="button-container">
-                    <div class="first-row">
-                        <button>+</button>
-                        <button>-</button>
-                        <button>A</button>
-                        <button>C</button>
-                    </div>
-                    <div class="second-row">
-                        <button>7</button>
-                        <button>8</button>
-                        <button>9</button>
-                        <button>*</button>
-                    </div>
-                    <div class="third-row">
-                        <button>4</button>
-                        <button>5</button>
-                        <button>6</button>
-                        <button>-</button>
-                    </div>
-                    <div class="fourth-row">
-                        <button>1</button>
-                        <button>2</button>
-                        <button>3</button>
-                        <button>.</button>
-                    </div>
-                    <div class="fifth-row">
-                        <button>0</button>
-                        <button>.</button>
-                        <button>=</button>
-                        <button>A</button>
-                    </div>
+                    <button>A/C</button>
+                    <button>+/-</button>
+                    <button>%</button>
+                    <button>/</button>
+                    <button>7</button>
+                    <button>8</button>
+                    <button>9</button>
+                    <button>*</button>
+                    <button>4</button>
+                    <button>5</button>
+                    <button>6</button>
+                    <button>-</button>
+                    <button>1</button>
+                    <button>2</button>
+                    <button>3</button>
+                    <button>+</button>
+                    <button>0</button>
+                    <button>.</button>
+                    <button>=</button>
+                    <button></button>
                 </div>
             </div>
-        </main>     
+        </main>
         <footer>
             <p>Rodrigo Nicolas 2024</p>
-        </footer>
+        </footer>     
     </div>
     <script src="app.js"></script>
 </body>
