--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
                     <p class="result">5346526</p>
                 </div>
                 <div class="button-container">
-                    <button>A/C</button>
-                    <button>+/-</button>
-                    <button>%</button>
-                    <button>/</button>
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
-                    <button>*</button>
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
-                    <button>-</button>
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
-                    <button>+</button>
-                    <button>0</button>
-                    <button>.</button>
-                    <button>=</button>
+                    <button type="button" id="clear" value="clear">AC</button>
+                    <button type="button" class="operator" value="%">%</button>
+                    <button type="button" class="operator" value="/">/</button>
+                    <button type="button" class="operator" value="">+/-</button>
+                    <button type="button" class="operand" value="7">7</button>
+                    <button type="button" class="operand" value="8">8</button>
+                    <button type="button" class="operand" value="9">9</button>
+                    <button type="button" class="operator" value="*">*</button>
+                    <button type="button" class="operand" value="4">4</button>
+                    <button type="button" class="operand" value="5">5</button>
+                    <button type="button" class="operand" value="6">6</button>
+                    <button type="button" class="operator" value="-">-</button>
+                    <button type="button" class="operand" value="1">1</button>
+                    <button type="button" class="operand" value="2">2</button>
+                    <button type="button" class="operand" value="3">3</button>
+                    <button type="button"  class="operator" value="+">+</button>
+                    <button type="button" class="operand" value="0">0</button>
+                    <button type="button" class="operator" value=".">.</button>
+                    <button type="button" id="show-result" value="show-result">=</button>
                     <button></button>
                 </div>
             </div>
