--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <main>
             <div class="calculator-container">
                 <div class="calculator-display">
-                    <p class="operation">4+4</p>
-                    <p class="result">5346526</p>
+                    <p class="operation">0</p>
+                    <p class="result">0</p>
                 </div>
                 <div class="button-container">
                     <button type="button" id="clear" value="clear">AC</button>
