--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <main>
             <div class="calculator-container">
                 <div class="calculator-display">
-                    <p class="operation">0</p>
-                    <p class="result">0</p>
+                    <p class="operation"></p>
+                    <p class="result"></p>
                 </div>
                 <div class="button-container">
                     <button type="button" id="clear" value="clear">AC</button>
@@ -35,9 +35,9 @@
                     <button type="button" class="operand" value="3">3</button>
                     <button type="button"  class="operator" value="+">+</button>
                     <button type="button" class="operand" value="0">0</button>
-                    <button type="button" class="operator" value=".">.</button>
+                    <button type="button" id="decimal" value=".">.</button>
+                    <button type="button" id="backspace">⌫</button>
                     <button type="button" id="show-result" value="show-result">=</button>
-                    <button></button>
                 </div>
             </div>
         </main>
