--- a/index.html
+++ b/index.html
@@ -8,42 +8,51 @@
 </head>
 <body>
     <div class="page-wrapper">
-        <h1>
-            Calculator
-        </h1>
-        <main>
-            <div class="calculator-container">
-                <div class="calculator-display">
-                    <p class="operation"></p>
-                    <p class="result"></p>
-                </div>
-                <div class="button-container">
-                    <button type="button" id="clear" value="clear">AC</button>
-                    <button type="button" class="operator" value="%">%</button>
-                    <button type="button" class="operator" value="/">/</button>
-                    <button type="button" class="operator" value="">+/-</button>
-                    <button type="button" class="operand" value="7">7</button>
-                    <button type="button" class="operand" value="8">8</button>
-                    <button type="button" class="operand" value="9">9</button>
-                    <button type="button" class="operator" value="*">*</button>
-                    <button type="button" class="operand" value="4">4</button>
-                    <button type="button" class="operand" value="5">5</button>
-                    <button type="button" class="operand" value="6">6</button>
-                    <button type="button" class="operator" value="-">-</button>
-                    <button type="button" class="operand" value="1">1</button>
-                    <button type="button" class="operand" value="2">2</button>
-                    <button type="button" class="operand" value="3">3</button>
-                    <button type="button"  class="operator" value="+">+</button>
-                    <button type="button" class="operand" value="0">0</button>
-                    <button type="button" id="decimal" value=".">.</button>
-                    <button type="button" id="backspace">⌫</button>
-                    <button type="button" id="show-result" value="show-result">=</button>
-                </div>
+        <div class="hero">
+            <h1 class="title">
+                Calculator
+            </h1>
+        </div>
+        <div class="calculator-container">
+
+            <div class="calculator-display">
+                <span>0</span>
             </div>
-        </main>
-        <footer>
+
+            <div class="button-container">
+                
+                <button>AC</button>
+                <button>+/-</button>
+                <button>%</button>
+                <button>/</button>
+
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button>*</button>
+
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>-</button>
+
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>+</button>
+
+                <button>0</button>
+                <button>.</button>
+                <button>3</button>
+                <button>=</button>
+
+            </div>
+        </div>
+
+        <footer class="footer">
             <p>Rodrigo Nicolas 2024</p>
-        </footer>     
+        </footer>
+
     </div>
     <script src="app.js"></script>
 </body>
