--- a/index.html
+++ b/index.html
@@ -16,35 +16,35 @@
         <div class="calculator-container">
 
             <div class="calculator-display">
-                <span>0</span>
+                4356
             </div>
 
             <div class="button-container">
                 
-                <button>AC</button>
-                <button>+/-</button>
-                <button>%</button>
-                <button>/</button>
+                <button class="button" value="clear">AC</button>
+                <button class="button" value="negative">+/-</button>
+                <button class="operand" value="percentage">%</button>
+                <button class="operand" value="divide">/</button>
 
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>*</button>
+                <button class="digits" value="7">7</button>
+                <button class="digits" value="8">8</button>
+                <button class="digits" value="9">9</button>
+                <button class="operand" value="multiply">*</button>
 
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>-</button>
+                <button class="digits" value="4">4</button>
+                <button class="digits" value="5">5</button>
+                <button class="digits" value="6">6</button>
+                <button class="operand" value="substract">-</button>
 
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>+</button>
+                <button class="digits" value="1">1</button>
+                <button class="digits" value="2">2</button>
+                <button class="digits" value="3">3</button>
+                <button class="operand" value="add">+</button>
 
-                <button>0</button>
-                <button>.</button>
-                <button>3</button>
-                <button>=</button>
+                <button class="digits" value="0">0</button>
+                <button class="button" value="decimal">.</button>
+                <button class="button" value=""></button>
+                <button class="operand" value="result">=</button>
 
             </div>
         </div>
