--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <div class="calculator-container">
 
             <div class="calculator-display">
-                4356
+                0
             </div>
 
             <div class="button-container">
                 
-                <button class="button" value="clear">AC</button>
+                <button class="operand" value="clear">AC</button>
                 <button class="button" value="negative">+/-</button>
                 <button class="operand" value="percentage">%</button>
                 <button class="operand" value="divide">/</button>
@@ -43,7 +43,7 @@
 
                 <button class="digits" value="0">0</button>
                 <button class="button" value="decimal">.</button>
-                <button class="button" value=""></button>
+                <button class="operand" value="backspace">⌫</button>
                 <button class="operand" value="result">=</button>
 
             </div>
