--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button class="digits" value="4">4</button>
                 <button class="digits" value="5">5</button>
                 <button class="digits" value="6">6</button>
-                <button class="operand" value="substract">-</button>
+                <button class="operand" value="subtract">-</button>
 
                 <button class="digits" value="1">1</button>
                 <button class="digits" value="2">2</button>
