--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="light-mode">
+<body class="dark-mode">
     <div class="page-wrapper">
         <div class="hero">
             <h1 class="title">
                 Calculator
             </h1>
-            <button  id="button-toggle" onclick="toggleLightMode()">Toggle Light Mode</button>
+            <button  id="button-toggle" onclick="toggleDarkMode()">Toggle Dark Mode</button>
         </div>
         <div class="calculator-container">
 
