--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="button-container">
                 
                 <button class="operand" value="clear" id="clear">AC</button>
-                <button class="button" value="negative">+/-</button>
+                <button class="special-operations" value="negative">+/-</button>
                 <button class="operand" value="percentage">%</button>
                 <button class="operand" value="divide">/</button>
 
@@ -50,8 +50,8 @@
                 <button class="operand" value="add">+</button>
 
                 <button class="digits" value="0">0</button>
-                <button class="button" value="decimal">.</button>
-                <button class="operand" value="backspace">⌫</button>
+                <button class="special-operations" value="decimal">.</button>
+                <button class="special-operations" value="backspace">⌫</button>
                 <button class="operand" value="result">=</button>
 
             </div>
